--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.49-4-g8e08c1f
+#### $$VERSION$$ v0.5-rc-0-g0c144bc
 #
 ### BEGIN INIT INFO
 # Provides: bashbot
