--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.6-dev-2-gda5e96d
+#### $$VERSION$$ v0.6-dev-3-g614eae8
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
