--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.5-rc-5-g352c64f
+#### $$VERSION$$ v0.5-rc-7-gc075ea6
 #
 ### BEGIN INIT INFO
 # Provides: bashbot
@@ -12,22 +12,30 @@
 # Description: Start or stop telegram-bot-bash server
 ### END INIT INFO
 
+# save default values
 TERM="" # disable bashbot clear and color output
-runas="root"  # not recommended!
+runas="nobody"  # not recommended!
 runcmd="echo Dry run:" # not actived until you edit lines below
 
-# uncomment the next line to run as other user, e.g. www
-# runas="nobody" 
+#######################
+# Configuration Section
 
-# uncomment one of the following lines 
-# runcmd="su $runas -s /bin/bash -c "      # runasuser with su
-# runcmd="runuser $runas -s /bin/bash -c " # runasuser with runuser
+# edit the next line to fit the user you want to run bashbot, e.g. nobody:
+runas="nobody" 
 
-# adjust the the values of the following lines
-start="/usr/local/telegram-bot-bash/bashbot.sh"
-lockfile=/usr/local/telegram-bot-bash/lockfile
-name='new-session' # telegram name of your bot
+# uncomment one of the following lines to fit your system 
+# runcmd="su $runas -s /bin/bash -c "      # runasuser with *su*
+# runcmd="runuser $runas -s /bin/bash -c " # runasuser with *runuser*
 
+# edit the values of the following lines to fit your config:
+start="/usr/local/telegram-bot-bash/bashbot.sh"	# location of your bashbot.sh script
+name='' 	# your bot name as given to botfather, e.g. mysomething_bot
+
+# END Configuration
+#######################
+
+lockfile="$(dirname $start)/lockfile"
+[ "$name" = "" ] && name="$runas"
 
 case "$1" in
 'start')
@@ -47,10 +55,10 @@ case "$1" in
 'status')
 	ps -f -u "$runas" | grep "$name" | grep -qF "bashbot.sh startbot"
 	if [ "$?" = "0" ]; then
-		echo "$name is running"
+		echo "bashbot ($name) is running"
 		RETVAL=0
 	else
-		echo "$name is stopped"
+		echo "bashbot ($name) is stopped"
 		RETVAL=1
 	fi
 	;;
