--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.5-rc-7-gc075ea6
+#### $$VERSION$$ v0.5-0-gfd81668
 #
 ### BEGIN INIT INFO
 # Provides: bashbot
