--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.50-15-g275a83b
+#### $$VERSION$$ v0.51-0-g4ddd122
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
