--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.6-dev2-8-g649fe44
+#### $$VERSION$$ v0.6-dev2-13-g88cf2d9
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -17,14 +17,14 @@
 
 # save default values
 TERM="" # disable bashbot clear and color output
-runas="nobody"  # not recommended!
+runas="nobody"
 runcmd="echo Dry run:" # not actived until you edit lines below
 
 #######################
 # Configuration Section
 
 # edit the next line to fit the user you want to run bashbot, e.g. nobody:
-runas="nobody" 
+# runas="nobody" 
 
 # uncomment one of the following lines to fit your system 
 # runcmd="su $runas -s /bin/bash -c "      # runasuser with *su*
