--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.6-dev2-13-g88cf2d9
+#### $$VERSION$$ v0.52-0-gdb7b19f
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
