--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.60-0-gf5162e2
+#### $$VERSION$$ 0.70-dev-2-gebd9e6f
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
