--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.61-0-g3b17bc2
+#### $$VERSION$$ 0.70-dev-11-g41b8e69
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
