--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.70-dev2-16-gc6d4086
+#### $$VERSION$$ v0.70-dev2-17-g92ad9e4
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
