first  version of send_inline_button

--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.70-dev2-18-g097a841
+#### $$VERSION$$ v0.70-dev2-21-g0cfb9f0
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
