--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.70-dev3-15-gfba8951
+#### $$VERSION$$ v0.70-pre1-0-g490c472
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
