--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.70-pre1-3-g3719c81
+#### $$VERSION$$ v0.70-pre1-4-g0d38a67
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
