--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.70-pre1-4-g0d38a67
+#### $$VERSION$$ v0.7-pre2-0-g7ce2c5b
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
