--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.94-dev2-0-g3d636f7
+#### $$VERSION$$ v0.94-dev3-0-geef955a
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -76,6 +76,10 @@ case "$1" in
 'suspendback'|'resumeback'|'killback')
 	$runcmd "$start $1"
 	RETVAL=$?
+	# kill inotifywait from runuser
+	if [ "$1" != "resumeback" ]; then 
+		kill -9 "$(ps -u "$runas" | grep inotifywait | sed 's/ .*//')" >/dev/null 2>&1
+	fi  
 	;;
 *)
 	echo "Usage: $0 { start | stop | restart | reload | restartback | suspendback | resumeback | killback }"
