--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.94-dev3-0-geef955a
+#### $$VERSION$$ v0.94-pre-0-gac2ec02
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
