--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.96-0-g3871ca9
+#### $$VERSION$$ v0.98-dev-2-geb4fa68
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -45,7 +45,7 @@ case "$1" in
 	RETVAL=$?
 	;;
 'stop')
-	$runcmd "$start kill"
+	$runcmd "$start stop"
 	RETVAL=$?
 	;;
 'status')
