--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,7 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v0.98-dev-2-geb4fa68
+#### $$VERSION$$ v0.98-dev-70-g694ee61
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -18,7 +18,7 @@
 # save default values
 TERM="" # disable bashbot clear and color output
 runas="nobody"
-runcmd="echo Dry run:" # not actived until you edit lines below
+runcmd="echo Dry run:" # not activated until you edit lines below
 
 #######################
 # Configuration Section
