--- a/bashbot.rc
+++ b/bashbot.rc
@@ -1,7 +1,12 @@
 #!/bin/sh
 # description: Start or stop telegram-bash-bot
 #
-#### $$VERSION$$ v1.2-dev-13-g2a5d47d
+# example service script to run bashbot in background
+# may or may not work on your system
+#
+# tested on: ubuntu, opensuse
+#
+#### $$VERSION$$ v1.2-pre2-0-ga1773cc
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -25,7 +30,7 @@ runcmd="echo Dry run:" # not activated until you edit lines below
 # edit the next line to fit the user you want to run bashbot, e.g. nobody:
 runas="nobody" 
 
-# uncomment one of the following lines to fit your system 
+# uncomment one of the example lines to fit your system 
 # runcmd="su $runas -s /bin/bash -c "      # runasuser with *su*
 # runcmd="runuser $runas -s /bin/bash -c " # runasuser with *runuser*
 
