--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.2-3-gb0281f1
+#### $$VERSION$$ v1.2-4-g40106ee
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -27,7 +27,7 @@ runcmd="echo Dry run:" # not activated until you edit lines below
 # Configuration Section
 
 # edit the next line to fit the user you want to run bashbot, e.g. nobody:
-runas="root"
+runas="nobody"
 
 # uncomment one of the example lines to fit your system 
 # runcmd="su $runas -s /bin/bash -c "      # runasuser with *su*
