--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.2-7-gd6e1c22
+#### $$VERSION$$ v1.20-0-g2ab00a2
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
