--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.21-0-gc85af77
+#### $$VERSION$$ v1.25-dev-9-g14fa2c7
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -30,8 +30,8 @@ runcmd="echo Dry run:" # not activated until you edit lines below
 runas="nobody"
 
 # uncomment one of the example lines to fit your system 
-# runcmd="su $runas -s /bin/bash -c "      # runasuser with *su*
-# runcmd="runuser $runas -s /bin/bash -c " # runasuser with *runuser*
+# runcmd="su ${runas} -s /bin/bash -c "      # runasuser with *su*
+# runcmd="runuser ${runas} -s /bin/bash -c " # runasuser with *runuser*
 
 # edit the values of the following lines to fit your config:
 start="cd /usr/local/telegram-bot-bash; /usr/local/telegram-bot-bash/bashbot.sh"	# location of your bashbot.sh script
@@ -40,24 +40,26 @@ name='' 	# your bot name as given to botfather, e.g. mysomething_bot
 # END Configuration
 #######################
 
-[ "$name" = "" ] && name="$runas"
+[ "${name}" = "" ] && name="${runas}"
 
 case "$1" in
 'start')
+	# shellcheck disable=SC2250
 	$runcmd "$start start" # >/dev/null 2>&1 </dev/null
 	RETVAL=$?
 	;;
 'stop')
+	# shellcheck disable=SC2250
 	$runcmd "$start stop"
 	RETVAL=$?
 	;;
 'status')
-	ps -f -u "$runas" | grep "$name" | grep -qF "bashbot.sh startbot"
+	ps -f -u "${runas}" | grep "${name}" | grep -qF "bashbot.sh startbot"
 	if [ "$?" = "0" ]; then
-		printf "bashbot (%s) is runningi\n" "$name"
+		printf "bashbot (%s) is runningi\n" "${name}"
 		RETVAL=0
 	else
-		printf "bashbot (%s) is stopped\n" "$name"
+		printf "bashbot (%s) is stopped\n" "${name}"
 		RETVAL=1
 	fi
 	;;
@@ -70,12 +72,13 @@ case "$1" in
 	RETVAL=$?
 	;;
 'suspendback'|'resumeback'|'killback')
+	# shellcheck disable=SC2250
 	$runcmd "$start $1"
 	RETVAL=$?
 	# kill inotifywait from runuser
 	if [ "$1" != "resumeback" ]; then 
 		# shellcheck disable=SC2046
-		kill -9 $(ps -u "$runas" | grep inotifywait | sed 's/ .*//') >/dev/null 2>&1
+		kill -9 $(ps -u "${runas}" | grep inotifywait | sed 's/ .*//') >/dev/null 2>&1
 	fi  
 	;;
 *)
@@ -83,4 +86,4 @@ case "$1" in
 	RETVAL=1
 	;;
 esac
-exit $RETVAL
+exit "${RETVAL}"
