some minor additions

--- a/mycommands.conf
+++ b/mycommands.conf
@@ -11,7 +11,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.25-dev-41-g37e4539
+#### $$VERSION$$ v1.25-dev-43-geac2137
 #######################################################
 
 ##########
@@ -32,12 +32,15 @@ export 'LANGUAGE=C.UTF-8'
 # edit the following lines to fit your bot usage
 # use ${ME} for current bot name in messages
 # Note: you must escape '_' in botname with two \ in markdown messages!
+
+# output of /info  command
 export bashbot_info='This is @'"${ME//_/\\\\_}"', the Telegram example bot written entirely in bash.
 Edit commands and messages in mycommands.sh!
 '
+
+# output of /help command (uncomment the next 2 lines
 # export bashbot_help='*Available commands*:
-#'
-export res=""
+# '
 
 # Set INLINE to 1 in order to receive inline queries.
 # To enable this option in your bot, send the /setinline command to @BotFather.
