--- a/mycommands.conf
+++ b/mycommands.conf
@@ -11,7 +11,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.25-dev-44-g168584d
+#### $$VERSION$$ v1.30-0-g3266427
 #######################################################
 
 ##########
