--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.30-dev-28-gd269f98
+#### $$VERSION$$ v1.30-0-g3266427
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
