--- a/mycommands.conf
+++ b/mycommands.conf
@@ -1,4 +1,5 @@
 #!/bin/bash
+# shellcheck disable=SC2034
 #######################################################
 #
 #        File: mycommands.conf
@@ -11,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.30-0-g3266427
+#### $$VERSION$$ v1.31-dev-15-g07f026c
 #######################################################
 
 ##########
