--- a/mycommands.conf
+++ b/mycommands.conf
@@ -12,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.31-dev-15-g07f026c
+#### $$VERSION$$ v1.35-dev-6-gc90b565
 #######################################################
 
 ##########
@@ -46,6 +46,10 @@ Edit commands and messages in mycommands.sh!
 # Set INLINE to 1 in order to receive inline queries.
 # To enable this option in your bot, send the /setinline command to @BotFather.
 export INLINE="0"
+
+# Set CALLBACK to 1 in order to receive callback queries.
+# callbacks are sent from inline_keyboards (buttons) attached tp bot messages
+export CALLBACK="0"
 
 # if your bot is group admin it get commands sent to other bots
 # Set MEONLY to 1 to ignore commands sent to other bots
