conf: BASHBOT_SLEEP use default, 10s and 2s as example

--- a/mycommands.conf
+++ b/mycommands.conf
@@ -12,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.35-dev-6-gc90b565
+#### $$VERSION$$ v1.35-dev-17-gb096338
 #######################################################
 
 ##########
@@ -68,7 +68,11 @@ unset BASHBOT_RETRY
 
 # set value for adaptive sleeping while waiting for uodates in millisconds
 # max slepp between polling updates 10s (default 5s)
-export BASHBOT_SLEEP="10000"
+# export BASHBOT_SLEEP="10000"
+
+# max slepp between polling updates 2s (default 5s)
+# export BASHBOT_SLEEP="2000"
+
 # add 0.2s if no update available, up to BASHBOT_SLEEP (default 0.1s)
 export BASHBOT_SLEEP_STEP="200"
 
