--- a/mycommands.conf
+++ b/mycommands.conf
@@ -12,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.35-dev-17-gb096338
+#### $$VERSION$$ v1.40-0-gf9dab50
 #######################################################
 
 ##########
