bin: process_batch: fix options bashbot.rc: support webhook

--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.45-dev-59-ga9ac7ea
+#### $$VERSION$$ v1.45-dev-60-g2415814
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 
@@ -34,11 +34,14 @@ runas="nobody"
 # runcmd="runuser ${runas} -s /bin/bash -c " # runasuser with *runuser*
 
 # edit the values of the following lines to fit your config:
-# your bot installation dir
-bashbotdir="/usr/local/telegram-bot-bash"
-bashbot="cd ${bashbotdir}; ${bashbotdir}/bashbot.sh"
 # your bot name as given to botfather, e.g. mysomething_bot
 name=""
+# your bot installation dir
+bashbotdir="/usr/local/telegram-bot-bash"
+databotdir="${bashbotdir}/data-bot-bash"
+# programs to run
+bashbot="cd ${bashbotdir}; ${bashbotdir}/bashbot.sh"
+webhook="cd ${bashbotdir}; ${bashbotdir}/bin/process_batch.sh --start --watch ${databotdir}/webhook-fifo-${name}"
 # set additionl parameter, e.g. debug
 mode=""
 
@@ -53,23 +56,43 @@ case "$1" in
 	$runcmd "$bashbot start $mode" # >/dev/null 2>&1 </dev/null
 	RETVAL=$?
 	;;
+'starthook')
+	# shellcheck disable=SC2250
+	$runcmd "$webhook $mode" # >/dev/null 2>&1 </dev/null
+	RETVAL=$?
+	;;
 'stop')
 	# shellcheck disable=SC2250
 	$runcmd "$bashbot stop $mode"
 	RETVAL=$?
 	;;
+'stophook')
+	# shellcheck disable=SC2250
+	pkill -u "${runas}" "process_batch.sh"
+	RETVAL=$?
+	;;
 'status')
-	ps -f -u "${runas}" | grep "${name}" | grep -qF "bashbot.sh startbot"
+	ps -f -u "${runas}" | grep "${name}" | grep -qF "process_batch.sh --start --watch"
 	if [ "$?" = "0" ]; then
-		printf "bashbot (%s) is running\n" "${name}"
+		printf "bashbot (%s) is running in poll mode\n" "${name}"
 		RETVAL=0
 	else
-		printf "bashbot (%s) is stopped\n" "${name}"
-		RETVAL=1
+		ps -f -u "${runas}" | grep "${name}" | grep -qF ""
+		if [ "$?" = "0" ]; then
+			printf "bashbot (%s) is running in webhook mode\n" "${name}"
+			RETVAL=0
+		else
+			printf "bashbot (%s) is stopped\n" "${name}"
+			RETVAL=1
+		fi
 	fi
 	;;
 'restart'|'reload')
 	$0 stop; $0 start 
+	RETVAL=$?
+	;;
+'restarthook'|'reloadhook')
+	$0 stophook; $0 starthook 
 	RETVAL=$?
 	;;
 'restartback')
@@ -87,7 +110,7 @@ case "$1" in
 	fi  
 	;;
 *)
-	printf "%s\n" "Usage: $0 { start | stop | restart | reload | restartback | suspendback | resumeback | killback }"
+	printf "%s\n" "Usage: $0 { start | stop | starthook | restart | reload | restartback | suspendback | resumeback | killback }"
 	RETVAL=1
 	;;
 esac
