--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.45-dev-61-g7b8e391
+#### $$VERSION$$ v1.45-dev-62-g4854d0d
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 # shellcheck disable=SC2250
@@ -28,15 +28,15 @@ runcmd="echo Dry run:" # not activated until you edit lines below
 # Configuration Section
 
 # edit the next line to fit the user you want to run bashbot, e.g. nobody:
-runas="www"
+runas="nobody"
 
 # uncomment one of the example lines to fit your system 
 # runcmd="su ${runas} -s /bin/bash -c "      # runasuser with *su*
-runcmd="/usr/sbin/runuser ${runas} -s /bin/bash -c " # runasuser with *runuser*
+# runcmd="/usr/sbin/runuser ${runas} -s /bin/bash -c " # runasuser with *runuser*
 
 # edit the values of the following lines to fit your config:
 # your bot name as given to botfather, e.g. mysomething_bot
-name="GnadelTest_bot"
+name=""
 # your bot installation dir
 bashbotdir="/usr/local/github/telegram-bot-bash-develop/DIST/telegram-bot-bash"
 databotdir="${bashbotdir}/data-bot-bash"
