--- a/mycommands.conf
+++ b/mycommands.conf
@@ -12,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.40-0-gf9dab50
+#### $$VERSION$$ v1.45-dev-75-gfdb2b3a
 #######################################################
 
 ##########
