--- a/bashbot.rc
+++ b/bashbot.rc
@@ -5,7 +5,7 @@
 #
 # tested on: ubuntu, opensuse, debian
 #
-#### $$VERSION$$ v1.45-dev-75-gfdb2b3a
+#### $$VERSION$$ v1.5-0-g8adca9b
 # shellcheck disable=SC2009
 # shellcheck disable=SC2181
 # shellcheck disable=SC2250
@@ -38,7 +38,7 @@ runas="nobody"
 # your bot name as given to botfather, e.g. mysomething_bot
 name=""
 # your bot installation dir
-bashbotdir="/usr/local/github/telegram-bot-bash-develop/DIST/telegram-bot-bash"
+bashbotdir="/usr/local/telegram-bot-bash"
 databotdir="${bashbotdir}/data-bot-bash"
 # programs to run
 bashbot="cd ${bashbotdir}; ${bashbotdir}/bashbot.sh"
@@ -57,6 +57,7 @@ case "$1" in
 	RETVAL=$?
 	;;
 'starthook')
+	printf "Starting bashbot in webhook mode ... "
 	$runcmd "$webhook $mode </dev/null &>>${bashbotdir}/logs/WEBHOOK.log &" # >/dev/null 2>&1 </dev/null
 	sleep 1
 	$0 status
@@ -67,9 +68,11 @@ case "$1" in
 	RETVAL=$?
 	;;
 'stophook')
+	printf "Stopping bashbot webhook mode ... "
 	KILLID="$(ps -f -u "${runas}" | grep "process_batch.sh --startbot" | sed -E 's/[^0-9]+([0-9]+).*/\1/')"
 	if [ -n "${KILLID}" ]; then
-		$runcmd "kill $(printf "%s" "${KILLID}" | tr -s "\r\n" "  " )" 
+		$runcmd "kill $(printf "%s" "${KILLID}" | tr -s "\r\n" "  " )"
+		sleep 1
 		$0 status
 	fi
 	RETVAL=$?
