--- a/mycommands.conf
+++ b/mycommands.conf
@@ -12,7 +12,7 @@
 #      Author: KayM (gnadelwartz), kay@rrr.de
 #     Created: 09.01.2021 07:27
 #
-#### $$VERSION$$ v1.51-0-g6e66a28
+#### $$VERSION$$ v1.52-0-g1a83202
 #######################################################
 
 ##########
